# tacobi

./: .gitignore  LICENSE  test_app.py
backend/: example.py  main.py  morpho.py  pyproject.toml  test_cache.db
backend/datasets/: curators_vaults_markets_counts.csv  merger.py  morpho_curator_count.csv  morpho_daily_prices.csv  morpho_market_count.csv  morpho_markets_utilization.csv  morpho_rewards.csv  morpho_tvl.csv  morpho_vault_count.csv
backend/morpho-datasets/: market_stats.csv  markets_current.csv  markets_current_format.py  markets_table_today.csv  protocol_stats.csv
backend/tacobi/: __init__.py  bi_app.py  caching.py  pandera.py  schema.py  tacobi.py  test.py  type_utils.py  value_types.py
backend/tacobi/data_model/: __init__.py  models.py  view_data.py
backend/tacobi/data_source/: __init__.py  models.py
backend/tacobi/data_source/cache/: __init__.py  base.py  sqlite.py
backend/tacobi/data_source/encode/: __init__.py  base.py  polars.py  pydantic.py
backend/tacobi/streaming/: bi_app.py
backend/tacobi/streaming/data_model/: __init__.py  models.py
backend/tacobi/streaming/data_source/: __init__.py  models.py
backend/tacobi/streaming/data_source/cache/: __init__.py  base.py  sqlite.py
backend/tacobi/streaming/data_source/encode/: __init__.py  base.py  polars.py  pydantic.py
backend/tacobi/streaming/view/: __init__.py  base.py  materialized_view.py  view.py  view_manager.py
backend/tacobi/view/: __init__.py  dataset_schema.py  materialized_view.py  type_utils.py  view.py  view_manager.py
backend/tacobi/view/view_models/: __init__.py  base.py  endpoint_model.py  materialized.py  view.py
backend/tests/: conftest.py
backend/tests/bi_app/: test_view_declarations.py
backend/tests/data_source/: test_cache.py  test_cached_data_source.py  test_encoder.py
backend/tests/e2e/: conftest.py  test_basic_functionality.py
backend/tests/unit/: test_caching.py  test_tacobi.py
backend/tests/view/: test_dataframe_model_conversion.py  test_view_manager.py  test_views.py
experiments-echarts/: package.json
frontend/: eslint.config.mjs  next.config.ts  openapi.json  package.json  pnpm-lock.yaml  (+2 more)
(+121 files in other folders)
